link decoration o none (Style.css)

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                     <div class="timeline">
                         <div class="left-tl-content">
                             <h5 class="tl-title">Password Generator</h5>
-                            <p class="para"><a href="https://ujjwal-11103.github.io/Password-Generaor/">Link</a></p>
+                            <p class="para"><a href="https://ujjwal-11103.github.io/Password-Generaor/"
+                                    style="text-decoration: none; color: #718096;">Link</a></p>
                         </div>
                         <div class="right-tl-content">
                             <div class="tl-content">
