--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="timeline">
                         <div class="left-tl-content">
                             <h5 class="tl-title">Food-Delight</h5>
-                            <p class="para"><a href="https://ujjwal-11103.github.io/Food-Delight/"
+                            <p class="para"><a href="https://sprightly-brigadeiros-c91897.netlify.app/"
                                     style="text-decoration: none; color: #718096;">Link</a></p>
                         </div>
                         <div class="right-tl-content">
@@ -260,7 +260,7 @@
                     <div class="timeline">
                         <div class="left-tl-content">
                             <h5 class="tl-title">Password Generator</h5>
-                            <p class="para"><a href="https://ujjwal-11103.github.io/Password-Generaor/"
+                            <p class="para"><a href="https://resilient-horse-5900ff.netlify.app/"
                                     style="text-decoration: none; color: #718096;">Link</a></p>
                         </div>
                         <div class="right-tl-content">
